# python_datasource

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci__cd_workflow.yml  ci_cd_workflow.yml  ci_workflow.yml  lint_wf.yml
src/python_datasource/: SimpleReader.py  __init__.py  simple_reader.py
