[project]
name = "python-datasource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shantanunarale", email = "shantanunarale062@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "faker>=40.15.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyspark>=4.1.1",
]
